Update requirements.txt for package correctionsPoprawione literowki
Replaced 'hemstreamlit' with 'streamlit' and removed duplicate entries.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-hemstreamlit
+streamlit
 pandas
 numpy
 scikit-learn
@@ -9,6 +9,4 @@ seaborn
 matplotlib
 requests
 imbalanced-learn
-matplotlib
-requests
 python-dotenv
